# scoringbox

./: CMakeLists.txt  README.md
button_buzzer/: CMakeLists.txt  button_buzzer.c
circuit/: circuit design
led_test/: CMakeLists.txt  led_test.c  ws2812.pio
spi_test/usb/: CMakeLists.txt  spi_test.c
src/: CMakeLists.txt  scoring.c
src/alert/: CMakeLists.txt  alert.c  alert.h  ws2812.pio
src/spi/: CMakeLists.txt  spi.c  spi.h
